<resources>
    <string name="app_name">" Sunshine"</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh" translatable="false">Refresh</string>
    <string name="title_activity_detail">Details</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_default" translatable="false">CB21QJ</string>

    <string name="pref_tempunit_label">Temperature Units</string>
    <string name="pref_tempunits_key" translatable="false">Temp_units</string>

    <string name="pref_units_label_metric">Metric</string>
    <string name="pref_units_label_imperial">Imperial</string>
    <string name="pref_units_metric" translatable="false">metric</string>
    <string name="pref_units_imperial" translatable="false">imperial</string>
    <string name="action_map">Map Location</string>
    <string name="share_to">Share to...</string>
</resources>
