<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <EditTextPreference
        android:title="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:singleLine="true"
        android:textAllCaps="true"/>

    <ListPreference
        android:title="@string/pref_tempunit_label"
        android:key="@string/pref_tempunits_key"
        android:dialogTitle="@string/pref_tempunit_label"
        android:entries="@array/tempUnits_entries"
        android:entryValues="@array/tempUnits_values"
        android:defaultValue="@string/pref_units_metric"/>

</PreferenceScreen>